update ui for components, start using bootstrap

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,4 @@
-$main-color: rgba(62, 175, 124, 1) 0%;
-$secondary-color: rgba(44, 62, 80, 1) 100%;
+$main-color: rgba(62, 175, 124, 1);
+$secondary-color: rgba(44, 62, 80, 1);
+$black: black;
 $white: white;
